# thunar-archive-plugin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  autogen.sh  configure.ac  configure.ac.in  configure.in.in  meson.build  xfce-revision.h.in
icons/: Makefile.am  meson.build
icons/16x16/: Makefile.am
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hy_AM.po  hye.po  hye_RU.po  id.po  ie.po  is.po  it.po  it_IT.po  ja.po  kab.po  kk.po  (+35 more)
scripts/: Makefile.am  ark.tap  engrampa.tap  file-roller.tap  meson.build  peazip.tap  template.tap
thunar-archive-plugin/: Makefile.am  meson.build  tap-backend.c  tap-backend.h  tap-provider.c  tap-provider.h  thunar-archive-plugin.c
